add api get user status
