# src/main/java/com/tvj/internaltool/dto/res/UserStatusListResDto.java
@@ -1,0 +1,18 @@
+package com.tvj.internaltool.dto.res;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.util.List;
+
+@Setter
+@Getter
+@NoArgsConstructor
+@AllArgsConstructor
+public class UserStatusListResDto {
+
+    private List<UserStatusResDto> userStatusResDtoList;
+
+}
