# src/main/java/com/tvj/internaltool/dto/res/UserStatusResDto.java
@@ -1,0 +1,18 @@
+package com.tvj.internaltool.dto.res;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Setter
+@Getter
+@NoArgsConstructor
+@AllArgsConstructor
+public class UserStatusResDto {
+
+    private String statusId;
+
+    private String statusName;
+
+}
